# Tagline

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  Justfile  README_llms.md  alembic.ini  docker-compose.yml  docker-compose.yml.example  get_dropbox_refresh_token.py  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  worker_entrypoint.py
app/: auth.py  (+11 more)
backend/: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Justfile  docker-compose.yml  pyproject.toml  railway-backend.json  railway-orchestrator.json  railway-worker.json  railway.toml  start_worker.py
backend/alembic/: env.py
backend/alembic/versions/: 139d399f7ea1_add_move_detection_fields_to_media_.py  1a5ee6dfa5a4_add_prefix_query_optimization_indexes.py  2ab9e467391c_create_media_binaries_table.py  3bc9e467391d_add_full_text_search.py  72dd20886263_remove_media_binaries_table_and_add_.py  8915ed909a0a_drop_all_tables_and_recreate_with_object_key.py  8eaec1a81cdd_replace_binary_data_with_s3_keys.py  9a5ab5704ada_create_auth_tables.py  9bd71a7c2a0d_add_missing_performance_indexes.py  add_performance_indexes.py  cf52e411bb53_add_thumbnail_column.py  e05b1143264b_add_thumbnail_mimetype.py  e52b568743dc_seed_default_roles.py  f1a2b3c4d5e6_add_firstname_and_lastname_to_users_table.py
backend/app/: auth.py  auth_models.py  auth_schemas.py  auth_utils.py  config.py  csv_utils.py  custom_worker.py  dependencies.py  domain_media_object.py  json_logging.py  main.py  models.py  redis_events.py  s3_binary_storage.py  schemas.py  storage_exceptions.py  storage_provider.py  storage_provider_singleton.py  structlog_config.py  worker_setup.py
backend/app/api/v1/routes/: __init__.py  admin.py  auth.py  diagnostics.py  events.py  library.py  logs.py  media.py  search.py  storage.py
backend/app/db/: database.py  init_db.py
backend/app/db/repositories/: auth.py  media_object.py
backend/app/media_processing/: __init__.py  base.py  factory.py  heicprocessor.py  jpegprocessor.py  pngprocessor.py
backend/app/static/: elements.html
backend/app/storage_providers/: base.py  dropbox.py  filesystem.py
backend/app/tasks/: ingest.py  ingest_orchestrator.py
backend/app/utils/: __init__.py  hashing.py  move_detection.py  path_normalization.py
backend/docs/: API.md  CHECKLIST.md  JSON_LOGGING.md  METADATA.md  structured_logging_standards.md
backend/scripts/: check_structured_logging.py
backend/tests/e2e/: test_health_e2e.py
backend/tests/unit/: conftest.py  test_auth.py  test_health.py  test_models.py  test_schemas.py  test_utils.py
(+187 files in other folders)
